chore: swagger for file-api
